--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ color: #f0f0f0;
 }
 </style>
 <footer class="footer-pBmpic3094525-element">
-<p><strong>Copyright 2023</strong></p>
+<p><strong>Copyright 2023 – Reconquista Magnética ®</strong></p>
 <p style="margin-top:4px;">Todos os Direitos Reservados</p>
 <div style="display:flex;align-items:center;justify-content:center;margin-top:24px;">
 <a id="t" style="margin-right:12px" href="#" target="_blank">
