--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR" dir="ltr">
 <head>
+  <link rel="icon" href="./Captura de tela 2023-11-13 153415.png" type="image/x-icon">
 <meta name="robots" content="noindex, nofollow">
 <link rel="shortcut icon" href="data:" />
 <meta property="og:type" content="website">
