--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="pt-BR"><head>
 	<meta charset="UTF-8">
-		<title>Pagina 147 Perfect – Amarracao Amorosa Brasil</title>
+		<title>Amarracao Amorosa Brasil</title>
 <meta name="robots" content="max-image-preview:large">
 <script src="https://connect.facebook.net/signals/config/544244592768829?v=2.9.138&amp;r=stable&amp;domain=amordevoltarapido.com" async=""></script><script src="https://connect.facebook.net/signals/config/1061187431941570?v=2.9.138&amp;r=stable&amp;domain=amordevoltarapido.com" async=""></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="application/javascript">console.log('PixelYourSite Free version 9.4.7.1');</script>
 <link rel="alternate" type="application/rss+xml" title="Feed para Amarracao Amorosa Brasil »" href="https://amordevoltarapido.com/feed/">
